# static_file_server

./: Cargo.toml  test.html
src/: main.rs
test/: test.html
