[package]
name = "static_file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
clap = { version = "3", features = ["cargo", "wrap_help"] }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
http = "0.2.0"
http-body-util = "0.1.0-rc.2"
bytes = "1.3.0"